5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1643_2703.log
== TEST (2019-04-08 18:35:47) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	leitor=18
else:	
	(nao_leitor)
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    (nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:07) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	leitor=18
else:	
	(nao_leitor)
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    (nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:28) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	leitor=18
else:	
	print(nao_leitor)
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:42) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	leitor=18
else:	
	print(nao_leitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:37:18) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	print(leitor)
else:	
	print(nao_leitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:25) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	print(eleitor)
else:	
	print(nao_leitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:33) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	print(eleitor)
else:	
	print(nao_eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:58) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	print("eleitor")
else:	
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:39:05) 
-- CODE:
num=float(input("numero de idade:"))
if(18<num):
	print("eleitor")
else:	
	print("nao_eleitor")
-- EXECUTION TIME:
0.204581
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
